tests/ui/fn/fn-recover-return-sign2.stderr
error: return types are denoted using `->`
  --> $DIR/fn-recover-return-sign2.rs:4:10
   |
LL | fn foo() => impl Fn() => bool {
   |          ^^ help: use `->` instead

error: expected one of `+`, `->`, `::`, `where`, or `{`, found `=>`
  --> $DIR/fn-recover-return-sign2.rs:4:23
   |
LL | fn foo() => impl Fn() => bool {
   |                       ^^ expected one of `+`, `->`, `::`, `where`, or `{`

error: aborting due to 2 previous errors

